--- a/app/src/main/res/layout/building_item.xml
+++ b/app/src/main/res/layout/building_item.xml
@@ -24,6 +24,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
+        android:fontFamily="@font/als_hauss_regular"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
