--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/bottom_border"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,15 +19,26 @@
 
         <TextView
             android:id="@+id/topBarTittle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/als_hauss_regular"
+            android:textColor="@color/ranepa_red"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:id="@+id/buttonNightTheme"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="#00FFFFFF"
+            app:icon="@drawable/ic_baseline_bedtime_24"
+            app:iconGravity="textTop"
+            app:iconPadding="0dp"
+            app:iconTint="@color/ranepa_red" />
     </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
