added coloros for night them; added new colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="ranepa_red">#921a1d</color>
     <color name="ranepa_gray">#f0f0f0</color>
+    <color name="dark_gray">#121212</color>
+    <color name="gray">#191919</color>
+    <color name="switch_button_color">#FF000000</color>
 </resources>
