--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="ranepa_gray">#202020</color>
     <color name="switch_button_color">#FFFFFFFF</color>
+    <color name="color_background">@color/gray</color>
+    <color name="dark_gray">#121212</color>
 </resources>
