--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -17,11 +17,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <Button
+            android:id="@+id/button_go_back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:background="#00121212"
+            android:foreground="@drawable/ic_baseline_arrow_back_24"
+            android:foregroundGravity="center"
+            android:foregroundTint="@color/white"
+            android:gravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
         <TextView
             android:id="@+id/topBarTittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_marginStart="287dp"
             android:fontFamily="@font/als_hauss_regular"
             android:gravity="center_vertical"
             android:textColor="@color/white"
@@ -30,12 +46,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_change_theme"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button_go_back"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_conversion_absoluteHeight="27dp"
             tools:layout_conversion_absoluteWidth="366dp" />
 
-        <ImageView
+        <Button
             android:id="@+id/button_change_theme"
             android:layout_width="50dp"
             android:layout_height="50dp"
