--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.sogya.projects.screens.listscreen.ListFragment"
+        android:name="com.sogya.projects.presentation.screens.listscreen.ListFragment"
         android:label="ListFragment" >
         <action
             android:id="@+id/action_listFragment_to_mapFragment"
@@ -14,6 +14,6 @@
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
-        android:name="com.sogya.projects.screens.mapscreen.MapFragment"
+        android:name="com.sogya.projects.presentation.screens.mapscreen.MapFragment"
         android:label="MapFragment" />
 </navigation>
