--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            app:titleTextColor="@color/ranepa_red" />
+            app:titleTextColor="@color/ranepa_red"
+            android:background="@color/ranepa_gray"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.fragment.app.FragmentContainerView
@@ -31,4 +32,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:navGraph="@navigation/main_graph"
         tools:layout="@layout/fragment_list" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
