--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_background">@color/white</color>
-    <color name="ranepa_red">#921a1d</color>
+    <color name="ranepa_red">#c8003e</color>
     <color name="ranepa_gray">#f0f0f0</color>
     <color name="dark_gray">#121212</color>
     <color name="gray">#191919</color>
