--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="dark_gray">#121212</color>
     <color name="gray">#191919</color>
     <color name="switch_button_color">#FF000000</color>
+    <color name="transparent">#00F0F0F0</color>
 </resources>
