--- a/app/src/main/res/layout/building_item.xml
+++ b/app/src/main/res/layout/building_item.xml
@@ -2,12 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="220dp"
     android:layout_marginStart="10dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="7.5dp"
     android:layout_marginEnd="10dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="7.5dp"
     app:cardCornerRadius="10dp"
+    android:elevation="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
